--- a/index.html
+++ b/index.html
@@ -36,19 +36,13 @@ title: Akhtar, CV & ML
 
         <!-- Right section: Profile Picture -->
         <div style="flex: 0 0 230px; display: flex; justify-content: flex-end;">
-       <div style="flex: 0 0 230px; display: flex; justify-content: flex-end;">
-        <img class="roundImg" src="ul_pic.jpeg" alt="profile" 
-             style="width: 230px; height: 184px; object-fit: cover; border-radius: 8px; 
-                    border: 2px solid transparent; 
-                    background-image: linear-gradient(135deg, #ff007f, #a533ff, #000000); 
-                    background-origin: border-box; 
-                    background-clip: padding-box, border-box;">
-    </div>
+    <img class="roundImg" src="ul_pic.jpeg" alt="profile" 
+         style="width: 230px; height: 184px; object-fit: cover; border-radius: 16px; border: 1px solid #ddd;">
 </div>
     </div>
 
     <!-- Bio Section -->
-    <div style="background: linear-gradient(135deg, #1f78b4, #000000); padding: 3px; border-radius: 10px; margin-top: 30px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
+    <div style="background: linear-gradient(135deg, #1f78b4, #000000); padding: 2px; border-radius: 10px; margin-top: 30px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
     <div style="background-color: #ffffff; padding: 20px 30px; border-radius: 8px; font-family: 'Lato', sans-serif; font-size: 14px; line-height: 1.6; color: #2c3e50;">
         <p style="margin: 0;">
             I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like 
