--- a/index.html
+++ b/index.html
@@ -128,6 +128,28 @@ title: Akhtar, CV & ML
                 </p>
             </div>
         </li>        
+        <!-- Publication Item 3 -->
+            <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
+                <!-- Thumbnail -->
+                <div style="flex: 0 0 150px; margin-right: 20px; display: flex; align-items: center;">
+                    <img src="thumb_weather_.png" alt="Weather Forecasting Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                </div>
+            
+                <!-- Publication Details -->
+                <div style="flex: 1;">
+                    <p style="font-family: 'Roboto Slab', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin: 0;">
+                        Vishal Nedungadi, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Marc Rußwurm, Ron Sarafian, Ioannis N. Athanasiadis, Yinon Rudich, Fahad Shahbaz Khan, and Salman Khan.
+                    </p>
+                    <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
+                        <strong>AirCast: Improving Air Pollution Forecasting Through Multi-Variable Data Alignment"</strong>. 
+                        In <strong>arXiv (2025)</strong>.
+                    </p>
+                    <p style="margin: 5px 0;">
+                        <a href="https://arxiv.org/pdf/2502.17919" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper]</a> 
+                        <a href="https://github.com/vishalned/AirCast" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #e74c3c;">[Code]</a>
+                    </p>
+                </div>
+            </li>
             <!-- Publication Item 3 -->
             <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
                 <!-- Thumbnail -->
