--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ title: Akhtar, CV & ML
                 </p>
                 <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
                     <strong>"O-TPT: Orthogonality Constraints for Calibrating Test-time Prompt Tuning in Vision-Language Models"</strong>. 
-                    In <strong>CVPR (2025)</strong>. <i>*Equally contributing first authors.</i>
+                    In <strong>CVPR (2025)</strong>. 
                 </p>
                 <p style="margin: 5px 0;">
                     <a href="https://arxiv.org/pdf/2503.12096" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper]</a> 
