--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Akhtar, CV & ML
         <!-- Left section: Title, Social Links, and Email Addresses -->
         <div style="flex: 1;">
             <p style="font-family: 'Lato', sans-serif; font-size: 16px; color: #495354; line-height: 1.6; margin: 0;">
-                <strong style="font-family: 'Roboto Slab', serif; font-size: 18px; color: #2c3e50;">Postdoc. Research Associate (CV & ML)</strong><br>
+                <strong style="font-family: 'Roboto Slab', serif; font-size: 18px; color: #2c3e50;">Postdoc. Fellow (CV & ML)</strong><br>
                 <span style="font-size: 16px; color: #495354;">MBZUAI, Abu Dhabi</span><br>
                 <span style="font-size: 16px; color: #495354;">United Arab Emirates</span><br>
 
@@ -103,7 +103,7 @@ title: Akhtar, CV & ML
                     </p>
                     <p style="margin: 5px 0;">
                         <a href="https://arxiv.org/pdf/2412.15190" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper]</a>
-                        <a href="https://huggingface.co/akshaydudhane/EarthDial_4B_RGB/tree/main" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #e74c3c;">[Code]</a>
+                        <a href="https://github.com/hiyamdebary/EarthDial" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #e74c3c;">[Code]</a>
                     </p>
                 </div>
             </li>
@@ -380,7 +380,7 @@ title: Akhtar, CV & ML
 <a id="services" class="anchor"></a>
 <h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 15px;">Services & Honors</h2>
 <ul style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.6; color: #2c3e50; padding-left: 20px; list-style-type: disc;">
-    <li style="margin-bottom: 10px;"><strong>Reviewer:</strong> CVPR 2023-2025, ICLR 2024-2025, ICCV 2023, NeurIPS 2023-2024, ACM MM 2021</li>
+    <li style="margin-bottom: 10px;"><strong>Reviewer:</strong> CVPR 2023-2025, ICLR 2024-2025, ICCV 2023-2025, NeurIPS 2023-2024</li>
     <li style="margin-bottom: 10px;"><strong>Awardee:</strong> NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award</li>
     <li style="margin-bottom: 10px;"><strong>Scholarship:</strong> PhD Fellowship, from Information Technology University, Lahore, Pakistan</li>
     <li style="margin-bottom: 10px;"><strong>Conferences (Attended):</strong> CVPR 2023, NeurIPS 2023, CVPR 2024, BMVC 2024</li>
