--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Akhtar, CV & ML
         <!-- Left section: Title, Social Links, and Email Addresses -->
         <div style="flex: 1;">
             <p style="font-family: 'Lato', sans-serif; font-size: 16px; color: #495354; line-height: 1.6; margin: 0;">
-                <strong style="font-family: 'Roboto Slab', serif; font-size: 18px; color: #2c3e50;">Postdoc. Fellow (CV & ML)</strong><br>
+                <strong style="font-family: 'Roboto Slab', serif; font-size: 18px; color: #2c3e50;">Postdoc. Researcher (CV & ML)</strong><br>
                 <span style="font-size: 16px; color: #495354;">MBZUAI, Abu Dhabi</span><br>
                 <span style="font-size: 16px; color: #495354;">United Arab Emirates</span><br>
 
@@ -45,7 +45,7 @@ title: Akhtar, CV & ML
     <div style="background: linear-gradient(135deg, #1f78b4, #000000); padding: 2px; border-radius: 10px; margin-top: 30px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
     <div style="background-color: #ffffff; padding: 20px 30px; border-radius: 8px; font-family: 'Lato', sans-serif; font-size: 14px; line-height: 1.6; color: #2c3e50;">
         <p style="margin: 0;">
-            I am a Postdoctoral Fellow in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like 
+            I am a Postdoctoral Researcher in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like 
             <strong style="color: #1f78b4;">Domain Adaptation</strong>, 
             <strong style="color: #1f78b4;">Uncertainty Estimation</strong>, 
             <strong style="color: #1f78b4;">Model Calibration</strong>, 
@@ -75,9 +75,14 @@ title: Akhtar, CV & ML
                 <p style="font-family: 'Roboto Slab', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin: 0;">
                     Ashshak Sharifdeen, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Sanoojan Baliah, Salman Khan, and Muhammad Haris Khan.
                 </p>
-                <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
+<!--                 <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
                     <strong>"O-TPT: Orthogonality Constraints for Calibrating Test-time Prompt Tuning in Vision-Language Models"</strong>. 
-                    In <strong>CVPR (2025)</strong>. 
+                    In <strong>CVPR (2025)</strong> as <strong>Highlight</strong>. 
+                </p> -->
+                <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
+                <strong>"O-TPT: Orthogonality Constraints for Calibrating Test-time Prompt Tuning in Vision-Language Models"</strong>. 
+                In <strong>CVPR (2025)</strong> as 
+                <span style="display: inline-block; font-style: italic; font-weight: bold; border: 1px solid black; padding: 2px 6px; border-radius: 4px; color: black;">Highlight</span>.
                 </p>
                 <p style="margin: 5px 0;">
                     <a href="https://arxiv.org/pdf/2503.12096" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper]</a> 
