--- a/index.html
+++ b/index.html
@@ -64,6 +64,29 @@ title: Akhtar, CV & ML
     <a id="publications" class="anchor"></a>
     <h2 style="font-family: 'Roboto Slab', serif; font-size: 20px; color: ##ffffff;">Publications (Selected)</h2>
     <ul style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
+	<!-- Publication Item 1 -->
+        <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
+            <!-- Thumbnail -->
+            <div style="flex: 0 0 150px; margin-right: 20px; display: flex; align-items: center;">
+                <img src="thumb_think.png" alt="ThinkGeo Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+            </div>
+        
+            <!-- Publication Details -->
+            <div style="flex: 1;">
+                <p style="font-family: 'Roboto Slab', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin: 0;">
+                    Akashah Shabbir*, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Akshay Dudhane*, Muhammad Umer Sheikh, Muhammad Haris Khan, Paolo Fraccaro, Juan Bernabe Moreno, Fahad Shahbaz Khan, Salman Khan.
+                </p>
+                <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
+                    <strong>"ThinkGeo: Evaluating Tool-Augmented Agents for Remote Sensing Tasks"</strong>. 
+                    In <strong>arXiv (2025)</strong>. <i>*Equally contributing first authors.</i>
+                </p>
+                <p style="margin: 5px 0;">
+                    <a href="https://arxiv.org/abs/2505.23752" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper]</a> 
+                    <a href="https://mbzuai-oryx.github.io/ThinkGeo/" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #e74c3c;">[Code]</a>
+                </p>
+            </div>
+        </li>        
+	    <hr style="border: 0; border-top: 1px solid #d3d3d3; margin: 0 0 30px 0;">
         <!-- Publication Item 1 -->
         <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
             <!-- Thumbnail -->
@@ -355,7 +378,7 @@ title: Akhtar, CV & ML
             <strong>Fellowship (4 Years) & Research Associate</strong>, Information Technology University (ITU), Lahore, Pakistan
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
                 <li><strong>Duration:</strong> Sep 2017 – Jul 2022</li>
-                <li><strong>PI:</strong> 
+                <li><strong>Advisor:</strong> 
                     <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Mohsen Ali</a>
                 </li>
             </ul>
