--- a/index.html
+++ b/index.html
@@ -43,18 +43,21 @@ title: Akhtar, CV & ML
 
     <!-- Bio Section -->
     <div style="background: linear-gradient(135deg, #1f78b4, #000000); padding: 2px; border-radius: 10px; margin-top: 30px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
-    <div style="background-color: #ffffff; padding: 20px 30px; border-radius: 8px; font-family: 'Lato', sans-serif; font-size: 14px; line-height: 1.6; color: #2c3e50;">
-        <p style="margin: 0;">
-            I am a Postdoctoral Researcher in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like 
-            <strong style="color: #1f78b4;">Domain Adaptation</strong>, 
-            <strong style="color: #1f78b4;">Uncertainty Estimation</strong>, 
-            <strong style="color: #1f78b4;">Model Calibration</strong>, 
-            and <strong style="color: #1f78b4;">Vision-Language Models (VLMs)</strong>. 
-            Currently, I am focused on tackling challenges in 
-            <strong style="color: #1f78b4;">Model Calibration</strong>, 
-            enhancing the accuracy of <strong style="color: #1f78b4;">Weather Modeling</strong>, 
-            and improving <strong style="color: #1f78b4;">Remote Sensing</strong> analysis through VLMs.
-        </p>
+  <div style="background-color: #ffffff; padding: 20px 30px; border-radius: 8px; font-family: 'Lato', sans-serif; font-size: 1em; line-height: 1.6; color: #2c3e50;">
+    <p style="margin: 0;">
+      I am a Postdoctoral Researcher in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like 
+      <strong style="color: #1f78b4;">Domain Adaptation</strong>, 
+      <strong style="color: #1f78b4;">Uncertainty Estimation</strong>, 
+      <strong style="color: #1f78b4;">Model Calibration</strong>, 
+      and <strong style="color: #1f78b4;">Vision-Language Models (VLMs)</strong>. 
+      Currently, I am focused on tackling challenges in 
+      <strong style="color: #1f78b4;">Model Calibration</strong>, 
+      enhancing the accuracy of <strong style="color: #1f78b4;">Weather Modeling</strong>, 
+      and improving <strong style="color: #1f78b4;">Remote Sensing</strong> analysis through VLMs. 
+	    
+      Advisors: <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
+                    <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Fahad S Khan</a>.
+    </p>
     </div>
 </div>
 </div>
